# judgeagent

./: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  pyproject.toml
.cursor/rules/: no-cursor-attribution.mdc
app/: copilotkit-client.tsx  globals.css  judge-workbench.tsx  layout.tsx  page.tsx
app/api/audit/handoff/: route.ts
app/api/copilotkit/[[...copilotkit]]/: route.ts
docs/: Agent-as-Judge-Current-vs-Proposed.docx  agent-relay-hackathon-demo.pptx
examples/: langgraph_travel_demo.py  run_evals.py  travel_demo.py
examples/data/: eval_false_negative.json  eval_false_positive.json  eval_uncertain.json  travel_corrected.json  travel_goal.json  travel_incomplete.json
scripts/: generate_team_doc.py
src/agent_judge/: __init__.py  audit.py  cli.py  handoff_schemas.py  judge.py  llm.py  prompts.py  schemas.py  server.py  tracing.py
tests/: __init__.py  test_aggregate.py  test_handoff_audit.py  test_weave_tracing.py
